# brand-studio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  regression.yml  release.yml
references/: workflows.md
scripts/: check_harness.sh  package_skill.py
skills/brand-studio/: .env.example  SKILL.md
skills/brand-studio/agents/: openai.yaml
skills/brand-studio/assets/: brand-brief-template.md  brand-studio-template.yaml  campaign-template.yaml  round-review.html  round.example.json
skills/brand-studio/producers/: README.md
skills/brand-studio/references/: contracts.md  recommendations.yaml  workflows.md
skills/brand-studio/scripts/: bootstrap_project.sh  catalog.py  check_harness.sh  check_studio.sh  cli.py  harness.py  studio.py
skills/marketing-harness/: .env.example  SKILL.md
skills/marketing-harness/agents/: openai.yaml
skills/marketing-harness/assets/: brand-brief-template.md  campaign-template.yaml  marketing-harness-template.yaml  skill-registry-template.yaml
skills/marketing-harness/references/: contracts.md  design-producer-protocol.md  workflows.md
skills/marketing-harness/scripts/: bootstrap_project.sh  check_harness.sh  harness.py
src/: cli.py
src/harness/: config.py  publish.py  regression.py
src/harness/providers/: __init__.py  factory.py  (+1 more)
tests/: test_config.py  test_package_skill.py  test_providers.py  test_publish.py  test_sandbox.py  test_skill_launcher.py  test_style.py
tests/evals/: behavior-cases.yaml
tests/sandbox/: drive.py  marketing.studio.yaml
(+56 files in other folders)
