[project]
name = "marketing-harness"
version = "0.1.0"
description = "A brand-locked image generation harness for versioned marketing artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "pillow>=10.4.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
]

[project.scripts]
harness = "cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
