[project]
name = "brand-studio-skill"
version = "0.1.0"
description = "A thin Codex skill for brand-locked marketing image workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["skills/brand-studio/scripts"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
